# VITRIOL

./: .gitignore  .gitmodules  .modules.order.cmd  .test_simple.ko.cmd  .test_simple.mod.cmd  .test_simple.mod.o.cmd  .test_simple.o.cmd  .vitriol.ko.cmd  .vitriol.mod.cmd  .vitriol.mod.o.cmd  .vitriol.o.cmd  .vitriol_new_ffi.o.d  AGENTS.md  AGENT_BRIEF.md  ARCHITECTURE_HISTORY.md  BRIEF_COMPILER_CHECKLIST.md  BRIEF_KERNEL_SOLUTION.md  CHANGES.md  CLAUDE.md  EXPERIMENT_LOG.md  FINDINGS_2026-05-13-alka-benchmark.md  HANDOFF.md  MILESTONE_1.md  MILESTONE_2.md  Makefile  OPTIMIZATION_PLAN.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  RESOURCE_LOCATIONS.md  ROADMAP.md  SESSION_LOG_2026-05-17.md  SESSION_LOG_2026-05-21.md  VITRIOL_ARCHITECTURE.md  benchmark_vitriol.sh  kernel.dbv  kernel.toml  launch_vitriol.sh  modules.order  pci_bindings.toml  (+25 more)
alka-executor/: Makefile  executor.c  gguf-offset-resolver.c  vitriol_alka_user.h
alka-handoff/: BIND_HANDOFF.md  HANDOFF.md  gtx960_2gb.alkavl  ivyb_pascal.alkavl  vitriol_alka.h
artifacts/: moore_stream.c  test_frgn.bv  test_frgn2.bv  test_simple.bv
assets/: ansi-logo.txt  vitriol-header.txt
docs/: AIRLLM_OPTIMIZATIONS.md  ALKA_EXECUTOR_DESIGN.md  (+28 more)
libvitriol/: Cargo.toml  __init__.py  client.py  gguf_reader.py  sweep_controller.py  types.py  vitriol-tui.py  vitriol_shim.py
libvitriol/memory/: compact.py  consolidate.py  db.py  retrieval.py  scorer.py
libvitriol/src/: estimator.rs  gguf.rs  lib.rs  main.rs  probe.rs
vitriol-daemon/: Cargo.toml  vitriol.c  vitriol_alka_kernel.h
vitriol-daemon/src/: main.rs
(+80 files in other folders)
