[package]
name = "vitriol-calibrate"
version = "0.1.0"
edition = "2021"
description = "VITRIOL calibration tool — hardware probe, GGUF analysis, VRAM estimator"

[lib]
name = "vitriol_calibrate"
path = "src/lib.rs"

[[bin]]
name = "vitriol-calibrate"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
